tdf#168066: implement Format property for Calc's URL field

Inserting the field threw exception from SvxUnoTextBase::insertTextContent,
because SvxFieldData::Create tried to access Format property of the field,
which is documented in css::text::textfield::URL service. It is trivial to
implement it, because the underlying SvxURLField already has it.

Change-Id: I98ddb7ed554b4223922a9da7560a62a0202878b4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190080
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins